feat: enhance article carousel with full paragraphs and improved navigation
- Add full article previews with complete first paragraphs
- Implement working navigation arrows with smooth transitions
- Add 'Read More' links with hover animations
- Improve card layout and spacing

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     <!-- Navigation -->
     <nav class="nav">
         <div class="nav-container">
-            <a href="#" class="logo">Rob Blaine</a>
+            <a href="index.html" class="logo">Rob Blaine</a>
             <div class="nav-links">
-                <a href="#home" class="active">About Me</a>
-                <a href="#insights">Insights</a>
-                <a href="#services">Services</a>
+                <a href="index.html" class="active">About Me</a>
+                <a href="insights.html">Insights</a>
+                <a href="services.html">Services</a>
+                <a href="contact.html">Contact</a>
             </div>
         </div>
     </nav>
@@ -48,22 +49,6 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <!-- Experience Section -->
-    <section id="experience" class="experience">
-        <div class="container">
-            <h2>Experience and Leadership in Generative AI</h2>
-            <div class="experience-content">
-                <p>My focus is on the intersection of AI and business strategy. I've helped startups and Fortune 500 companies navigate the complexities of Generative AI, transforming their operations and uncovering new growth opportunities. At Thinktiv, I developed an AI consulting practice and led AI strategy engagements for private equity firms and their portfolio companies, Fortune 500 enterprises, and startups.</p>
-            </div>
-        </div>
-        <div class="ai-decorations">
-            <div class="ai-decoration"></div>
-            <div class="ai-decoration"></div>
-            <div class="ai-decoration"></div>
-        </div>
-        <div class="ai-grid"></div>
     </section>
 
     <!-- Logo Bar -->
@@ -92,30 +77,79 @@
         </div>
     </section>
 
-</section>
-
-<!-- Current Work Section -->
-<section class="current-work">
-    <div class="container">
-        <div class="current-work-content">
-            <div class="ai-decorations-alt">
-                <div class="neural-network">
-                    <div class="node-layer layer-1"></div>
-                    <div class="node-layer layer-2"></div>
-                    <div class="node-layer layer-3"></div>
+    <!-- Experience Section -->
+    <section id="experience" class="experience">
+        <div class="container">
+            <div class="content-row">
+                <div class="image-content">
+                    <img src="images/speaking.jpg" alt="AI Speaking and Consulting" class="section-image">
                 </div>
-                <div class="ai-decoration-alt"></div>
-                <div class="ai-decoration-alt"></div>
-                <div class="ai-grid-alt"></div>
-            </div>
-            <div class="current-work-text">
-                <p>Now at MIT Sloan, I'm part of the leadership teams at Sundai Club, Boston's premier AI hacking community of MIT and Harvard students, and the Sloan AI/ML Club. I have worked to develop a keen understanding of the technical nuances of AI necessary to identify use cases and assess the feasibility of building them. I have conducted risk analysis for investments prone to disruption or opportunities from AI. Now, I'm building tools to improve the delivery of management consulting services.</p>
+                <div class="text-content">
+                    <h2>Experience and Leadership in Generative AI</h2>
+                    <p>As a consultant, I've helped startups and Fortune 500 companies navigate the complexities of Generative AI, transforming their operations and uncovering new growth opportunities. At Thinktiv, I developed an AI consulting practice and led AI strategy engagements for private equity firms and their portfolio companies, Fortune 500 enterprises, and startups.</p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- Footer -->{{ ... }}
+    <!-- Current Work Section -->
+    <section class="current-work">
+        <div class="container">
+            <div class="content-row">
+                <div class="text-content">
+                    <h2>At the Intersection of AI and Business</h2>
+                    <p>Now at MIT Sloan, I'm part of the leadership teams at Sundai Club, Boston's premier AI hacking community of MIT and Harvard students, and the Sloan AI/ML Club. I have worked to develop a keen understanding of the technical nuances of AI necessary to identify use cases and assess the feasibility of building them. I have conducted risk analysis for investments prone to disruption or opportunities from AI. Now, I'm building tools to improve the delivery of management consulting services.</p>
+                </div>
+                <div class="image-content">
+                    <img src="images/teaching.jpg" alt="AI Teaching and Leadership" class="section-image">
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <!-- Insights Preview Section -->
+    <section class="insights-preview-section dark-section">
+        <div class="container">
+            <div class="insights-header">
+                <h2>Read My Latest Perspectives on AI & Business</h2>
+            </div>
+            <div class="carousel">
+                <button class="nav-button prev">←</button>
+                <button class="nav-button next">→</button>
+                <div class="carousel-inner">
+                    <div class="card" data-position="center">
+                        <a href="articles/in-search-of-a-moat:-the-decline-of-b2b-saas.html">
+                            <h3>In Search of a Moat: The Decline of B2B SaaS</h3>
+                            <p>The enterprise software landscape is undergoing a seismic shift. As AI capabilities become more sophisticated and accessible, the traditional moats that protected B2B SaaS companies are eroding. Features that once took months to develop can now be replicated in days, and the barriers to entry are lower than ever. This transformation is forcing companies to rethink their competitive advantages and value propositions.</p>
+                            <div class="read-more">Read Full Article <span class="arrow">→</span></div>
+                        </a>
+                    </div>
+                    <div class="card" data-position="right">
+                        <a href="articles/systems-thinkers:-the-new-10x-employees.html">
+                            <h3>Systems Thinkers: The New 10X Employees</h3>
+                            <p>In an era where AI can code, write, and analyze at superhuman speeds, the most valuable employees are no longer those who excel at individual tasks. Instead, the true differentiators are systems thinkers – professionals who can understand complex interactions, identify leverage points, and orchestrate AI tools to create transformative solutions. This shift is redefining what it means to be a high-performing employee.</p>
+                            <div class="read-more">Read Full Article <span class="arrow">→</span></div>
+                        </a>
+                    </div>
+                    <div class="card" data-position="hidden">
+                        <a href="articles/trust-issues:-navigating-our-relationship-with-ai.html">
+                            <h3>Trust Issues: Navigating Our Relationship with AI</h3>
+                            <p>As AI systems become more integrated into our daily lives and critical business operations, the question of trust becomes paramount. How do we build AI systems that are not just powerful, but also reliable and transparent? This exploration delves into the technical and psychological aspects of human-AI trust, offering practical frameworks for developing trustworthy AI systems.</p>
+                            <div class="read-more">Read Full Article <span class="arrow">→</span></div>
+                        </a>
+                    </div>
+                    <div class="card view-all" data-position="hidden">
+                        <a href="insights.html">
+                            <h3>View All Insights</h3>
+                            <p>Dive deeper into my perspectives on artificial intelligence, business strategy, and technological innovation. Explore a collection of articles that examine the intersection of technology and business, offering practical insights for navigating the AI-driven future.</p>
+                            <div class="read-more">Browse Articles <span class="arrow">→</span></div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Footer -->
     <footer class="footer">
@@ -130,5 +164,6 @@
         </div>
     </footer>
     <script src="scripts/main.js"></script>
+    <script src="scripts/carousel.js"></script>
 </body>
 </html>
