feat: add additional pages and assets
- Add contact and services pages
- Add article pages and images
- Add carousel and substack sync scripts
- Include requirements.txt

--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insights - Rob Blaine</title>
+    <title>Services - Rob Blaine</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -23,20 +23,41 @@
             <a href="index.html" class="logo">Rob Blaine</a>
             <div class="nav-links">
                 <a href="index.html">About Me</a>
-                <a href="insights.html" class="active">Insights</a>
-                <a href="services.html">Services</a>
+                <a href="insights.html">Insights</a>
+                <a href="services.html" class="active">Services</a>
                 <a href="contact.html">Contact</a>
             </div>
         </div>
     </nav>
 
-    <!-- Insights Section -->
-    <section class="insights">
+    <!-- Services Section -->
+    <section class="services-section">
         <div class="container">
-            <h1>Insights & Articles</h1>
-            <div class="insights-grid" id="insights-container">
-                <!-- Articles will be loaded here dynamically -->
-                <div class="loading">Loading articles...</div>
+            <div class="services-header">
+                <h1>Services</h1>
+                <p class="services-intro">Helping businesses navigate the AI revolution through strategic consulting and implementation.</p>
+            </div>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-icon">🎯</div>
+                    <h3>Strategy Consulting</h3>
+                    <p>Growth strategy, market entry, product strategy, and competitive analysis.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">🤝</div>
+                    <h3>M&A Advisory</h3>
+                    <p>Due diligence, target screening, synergy analysis, and post-merger integration.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">📈</div>
+                    <h3>Performance Improvement</h3>
+                    <p>Cost reduction, process optimization, and operational excellence.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">🤖</div>
+                    <h3>AI Strategy</h3>
+                    <p>Use case identification, feasibility assessment, and implementation roadmap.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -53,6 +74,5 @@
             </div>
         </div>
     </footer>
-    <script src="scripts/insights.js"></script>
 </body>
 </html>
