Added mobile hamburger menu, updated CTA styling, and adjusted header text

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <nav class="nav">
         <div class="nav-container">
             <a href="index.html" class="logo">Rob Blaine</a>
+            <button class="mobile-menu-button">
+                <span class="hamburger"></span>
+            </button>
             <div class="nav-links">
                 <a href="index.html" class="active">About Me</a>
                 <a href="insights.html">Insights</a>
@@ -111,7 +114,7 @@
     <section class="insights-preview-section dark-section">
         <div class="container">
             <div class="insights-header">
-                <h2>Read My Latest Perspectives on AI & Business</h2>
+                <h1>Read My Perspectives on AI & Business</h1>
             </div>
             <div class="carousel">
                 <button class="nav-button prev">←</button>
@@ -150,6 +153,14 @@
         </div>
     </section>
 
+<!-- Final CTA -->
+<section class="final-cta">
+    <div class="container">
+        <h2>Ready to Transform Your Business with AI?</h2>
+        <p>Let's explore how we can work together to unlock new opportunities.</p>
+        <a href="services.html" class="cta-button large">Explore What AI Can Do For You →</a>
+    </div>
+</section>
 
     <!-- Footer -->
     <footer class="footer">
