--- a/services.html
+++ b/services.html
@@ -30,35 +30,87 @@
         </div>
     </nav>
 
-    <!-- Services Section -->
-    <section class="services-section">
+    <!-- Services Header -->
+    <section class="services-header">
         <div class="container">
-            <div class="services-header">
-                <h1>Services</h1>
-                <p class="services-intro">Helping businesses navigate the AI revolution through strategic consulting and implementation.</p>
+            <h1>Unlock AI's Potential for Your Business</h1>
+            <p class="services-intro">AI is transforming industries, and I'm here to help you navigate this shift. Whether you're assessing risks, exploring opportunities, or testing ideas, I offer flexible guidance tailored to your goals. Let's work together to see how AI can create value for your business.</p>
+        </div>
+    </section>
+
+    <!-- Services Grid -->
+    <section class="services-grid">
+        <div class="container">
+            <div class="services-wrapper">
+                <!-- AI Risk Assessment -->
+                <div class="service-card">
+                    <div class="service-content">
+                        <div class="service-icon">🔍</div>
+                        <h2>AI Risk Assessment</h2>
+                        <p>Evaluate the impact of AI on your industry or investments.</p>
+                        <ul>
+                            <li>Assess potential risks of AI-driven disruption</li>
+                            <li>Explore AI opportunities to stay competitive</li>
+                            <li>Provide strategic insights for future-proofing your business</li>
+                        </ul>
+                        <a href="contact.html" class="cta-button">Work with Me →</a>
+                    </div>
+                </div>
+
+                <!-- AI Use Case Discovery -->
+                <div class="service-card">
+                    <div class="service-content">
+                        <div class="service-icon">💡</div>
+                        <h2>AI Use Case Discovery</h2>
+                        <p>Discover where AI can drive value in your business.</p>
+                        <ul>
+                            <li>Analyze your workflows to identify pain points</li>
+                            <li>Recommend potential AI use cases for maximum impact</li>
+                            <li>Provide high-level guidance on getting started</li>
+                        </ul>
+                        <a href="contact.html" class="cta-button">Work with Me →</a>
+                    </div>
+                </div>
+
+                <!-- Prototyping and Experiments -->
+                <div class="service-card">
+                    <div class="service-content">
+                        <div class="service-icon">🚀</div>
+                        <h2>Prototyping and Experiments</h2>
+                        <p>Test your AI ideas with lightweight pilots.</p>
+                        <ul>
+                            <li>Build and validate initial MVPs for AI solutions</li>
+                            <li>Explore whether AI fits into specific processes</li>
+                            <li>Recommend tools and resources to scale successful experiments</li>
+                        </ul>
+                        <a href="contact.html" class="cta-button">Work with Me →</a>
+                    </div>
+                </div>
+
+                <!-- Strategic AI Guidance -->
+                <div class="service-card">
+                    <div class="service-content">
+                        <div class="service-icon">🎯</div>
+                        <h2>Strategic AI Guidance</h2>
+                        <p>Align AI initiatives with your business strategy.</p>
+                        <ul>
+                            <li>Discuss how AI fits into your long-term growth plans</li>
+                            <li>Identify partners, vendors, or technologies to consider</li>
+                            <li>Outline a manageable path for AI adoption</li>
+                        </ul>
+                        <a href="contact.html" class="cta-button">Work with Me →</a>
+                    </div>
+                </div>
             </div>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">🎯</div>
-                    <h3>Strategy Consulting</h3>
-                    <p>Growth strategy, market entry, product strategy, and competitive analysis.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">🤝</div>
-                    <h3>M&A Advisory</h3>
-                    <p>Due diligence, target screening, synergy analysis, and post-merger integration.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">📈</div>
-                    <h3>Performance Improvement</h3>
-                    <p>Cost reduction, process optimization, and operational excellence.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">🤖</div>
-                    <h3>AI Strategy</h3>
-                    <p>Use case identification, feasibility assessment, and implementation roadmap.</p>
-                </div>
-            </div>
+        </div>
+    </section>
+
+    <!-- Final CTA -->
+    <section class="final-cta">
+        <div class="container">
+            <h2>Still wondering how AI can work for your business?</h2>
+            <p>Let's start the conversation.</p>
+            <a href="contact.html" class="cta-button large">Contact Me →</a>
         </div>
     </section>
 
@@ -74,5 +126,6 @@
             </div>
         </div>
     </footer>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
