Fixed case sensitivity in image paths

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         <div class="container">
             <div class="logo-grid">
                 <div class="logo-item">
-                    <img src="images/MITSloan.png" alt="MIT Sloan" class="logo-img">
+                    <img src="images/mitsloan.png" alt="MIT Sloan" class="logo-img">
                 </div>
                 <div class="logo-item">
                     <img src="images/mitmedialab.png" alt="MIT Media Lab" class="logo-img">
                 </div>
                 <div class="logo-item">
-                    <img src="images/UF.png" alt="University of Florida" class="logo-img">
+                    <img src="images/uf.png" alt="University of Florida" class="logo-img">
                 </div>
                 <div class="logo-item">
                     <img src="images/deloitte.png" alt="Deloitte" class="logo-img">
