Added mobile menu to all pages and included main.js on insights page

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,9 @@
     <nav class="nav">
         <div class="nav-container">
             <a href="index.html" class="logo">Rob Blaine</a>
+            <button class="mobile-menu-button">
+                <span class="hamburger"></span>
+            </button>
             <div class="nav-links">
                 <a href="index.html">About Me</a>
                 <a href="insights.html">Insights</a>
