--- a/insights.html
+++ b/insights.html
@@ -21,6 +21,9 @@
     <nav class="nav">
         <div class="nav-container">
             <a href="index.html" class="logo">Rob Blaine</a>
+            <button class="mobile-menu-button">
+                <span class="hamburger"></span>
+            </button>
             <div class="nav-links">
                 <a href="index.html">About Me</a>
                 <a href="insights.html" class="active">Insights</a>
@@ -54,5 +57,6 @@
         </div>
     </footer>
     <script src="scripts/insights.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
