feat: add CTA to articles and update contact page styling

--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@
                             <li>Explore AI opportunities to stay competitive</li>
                             <li>Provide strategic insights for future-proofing your business</li>
                         </ul>
-                        <a href="contact.html" class="cta-button">Work with Me →</a>
+                        <a href="contact.html" class="cta-button">Start Now</a>
                     </div>
                 </div>
 
@@ -71,7 +71,7 @@
                             <li>Recommend potential AI use cases for maximum impact</li>
                             <li>Provide high-level guidance on getting started</li>
                         </ul>
-                        <a href="contact.html" class="cta-button">Work with Me →</a>
+                        <a href="contact.html" class="cta-button">Let's Get Started</a>
                     </div>
                 </div>
 
@@ -86,7 +86,7 @@
                             <li>Explore whether AI fits into specific processes</li>
                             <li>Recommend tools and resources to scale successful experiments</li>
                         </ul>
-                        <a href="contact.html" class="cta-button">Work with Me →</a>
+                        <a href="contact.html" class="cta-button">Work with Me</a>
                     </div>
                 </div>
 
@@ -101,7 +101,7 @@
                             <li>Identify partners, vendors, or technologies to consider</li>
                             <li>Outline a manageable path for AI adoption</li>
                         </ul>
-                        <a href="contact.html" class="cta-button">Work with Me →</a>
+                        <a href="contact.html" class="cta-button">Get In Touch</a>
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
         <div class="container">
             <h2>Still wondering how AI can work for your business?</h2>
             <p>Let's start the conversation.</p>
-            <a href="contact.html" class="cta-button large">Contact Me →</a>
+            <a href="contact.html" class="cta-button large">Contact Me</a>
         </div>
     </section>
 
