--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                             <select id="subject" name="subject" required>
                                 <option value="">Select a topic</option>
                                 <option value="AI Consulting">AI Consulting</option>
-                                <option value="Speaking Inquiry">Speaking Inquiry</option>
+                                <option value="Venture Scouting">Venture Scouting</option>
                                 <option value="General Question">General Question</option>
                             </select>
                         </div>
